# azmeta-pipeline-cli

./: .pre-commit-config.yaml  README.md  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: build-dist.yml  release-dist.yml
eng/: build_pyz.sh
src/azmpcli/: __main__.py  _patch.py
